# mediarr

./: .gitignore  .impeccable.md  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
crates/mediarr-cli/: Cargo.toml
crates/mediarr-cli/src/: main.rs  output.rs
crates/mediarr-cli/src/commands/: config.rs  history.rs  mod.rs  rename.rs  review.rs  scan.rs  undo.rs  watch.rs
crates/mediarr-cli/tests/: cli_integration.rs
crates/mediarr-core/: Cargo.toml
crates/mediarr-core/src/: config.rs  error.rs  fs_util.rs  history.rs  lib.rs  parser.rs  renamer.rs  scanner.rs  subtitle.rs  template.rs  types.rs  watcher.rs
crates/mediarr-core/tests/: integration_test.rs  messy_release_folder_regression.rs
crates/mediarr-tauri/: Cargo.toml  tauri.conf.json
crates/mediarr-tauri/capabilities/: default.json
crates/mediarr-tauri/icons/: icon.icns
crates/mediarr-tauri/src/: error.rs  lib.rs  main.rs  state.rs
crates/mediarr-tauri/src/commands/: config.rs  history.rs  mod.rs  rename.rs  scan.rs  watcher.rs
crates/mediarr-tauri/tests/: command_tests.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  TESTING.md
frontend/: package-lock.json  package.json  playwright.config.ts  svelte.config.ts  vitest.config.ts
frontend/e2e/: history.spec.ts  navigation.spec.ts  scan.spec.ts  settings.spec.ts  watcher.spec.ts
frontend/e2e/helpers/: mock-setup.ts
frontend/src/: app.css  app.html
frontend/src/lib/: utils.test.ts  utils.ts
frontend/src/lib/components/history/: BatchCard.svelte  RenameDetail.svelte
frontend/src/lib/components/scan/: AmbiguityPanel.svelte  EmptyState.svelte  FilterTabs.svelte  FolderSelector.svelte  MediaBadge.svelte  MetadataPills.svelte  ScanBottomBar.svelte  ScanRow.svelte  ScanTopBar.svelte  SubtitleTree.svelte
frontend/src/lib/components/settings/: DiscoveryToggles.svelte  GeneralSettings.svelte  SubtitlePrefs.svelte  TemplateEditor.svelte  UpdateChecker.svelte
frontend/src/lib/components/ui/tabs/: tabs-list.svelte  tabs-trigger.svelte
frontend/src/lib/components/watcher/: ActivityLog.svelte  AddWatcherDialog.svelte  ReviewQueue.svelte  WatcherCard.svelte  WatcherSettingsEditor.svelte
frontend/src/lib/state/: config.svelte.test.ts  config.svelte.ts  history.svelte.test.ts  history.svelte.ts  scan.svelte.test.ts  scan.svelte.ts  theme.svelte.test.ts  theme.svelte.ts  updater.svelte.ts  watcher.svelte.test.ts  watcher.svelte.ts
frontend/src/lib/types/: index.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/history/: +page.svelte
frontend/src/routes/scan/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/src/routes/watcher/: +page.svelte
frontend/src/test/: fixtures.ts  mocks.ts  setup.ts
