[package]
name = "mediarr-cli"
version = "0.1.0"
edition = "2021"
description = "CLI binary for Mediarr media file renaming and organisation"

[[bin]]
name = "mediarr"
path = "src/main.rs"

[dependencies]
mediarr-core = { path = "../mediarr-core" }
clap = { version = "4.6", features = ["derive"] }
owo-colors = { version = "4.3", features = ["supports-colors"] }
comfy-table = "7.2"
dialoguer = "0.12"
is-terminal = "0.4"
anyhow = "1.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "1.1"

[dev-dependencies]
assert_cmd = "2.2"
assert_fs = "1.1"
predicates = "3.1"
tempfile = "3.27"
