[package]
name = "mediarr-cli"
version = "0.1.11"
edition = "2021"
description = "CLI binary for Mediarr media file renaming and organisation"
license = "GPL-3.0-only"

[[bin]]
name = "mediarr"
path = "src/main.rs"

[dependencies]
mediarr-core = { path = "../mediarr-core" }
clap = { version = "4.6.1", features = ["derive"] }
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
comfy-table = "7.2.2"
dialoguer = "0.12.0"
is-terminal = "0.4.17"
anyhow = "1.0.102"
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "signal"] }
chrono = { version = "0.4.44", features = ["serde"] }
toml = "1.1.2"

[dev-dependencies]
assert_cmd = "2.2.1"
assert_fs = "1.1.3"
predicates = "3.1.4"
tempfile = "3.27.0"
serde_json = "1.0.149"
