[package]
name = "mediarr-core"
version = "0.1.11"
edition = "2021"
description = "Core library for Mediarr media file renaming and organisation"
license = "GPL-3.0-only"

[dependencies]
hunch = "1.1.8"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
dirs = "6.0.0"
thiserror = "2.0.18"
tracing = "0.1.44"
isolang = { version = "2.4.0", features = ["english_names", "lowercase_names"] }
walkdir = "2.5.0"
sanitize-filename = "0.6.0"
regex = "1.12.3"
uuid = { version = "1.23.1", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
tokio = { version = "1.52.1", features = ["rt", "sync", "time", "macros"] }

[dev-dependencies]
tempfile = "3.27.0"
