[package]
name = "mediarr-tauri"
version = "0.1.0"
edition = "2021"
description = "Tauri desktop shell for Mediarr"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
mediarr-core = { path = "../mediarr-core" }
tauri = { version = "2.10", features = [] }
tauri-plugin-dialog = "2.6"
tauri-plugin-fs = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "mediarr_tauri_lib"
