[package]
name = "mediarr-tauri"
version = "0.1.7"
edition = "2021"
description = "Tauri desktop shell for Mediarr"
license = "GPL-3.0-only"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
mediarr-core = { path = "../mediarr-core" }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros"] }
thiserror = "2.0.18"
chrono = { version = "0.4.44", features = ["serde"] }
rfd = "0.15"

[dev-dependencies]
tempfile = "3.27.0"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "mediarr_tauri_lib"
